<resources>
    <string name="app_name">LauncherApp</string>
    <string name="mainPageTitle">Application Guide:</string>
    <string name="mainPageText">
        This is the launcher page for Group 7\'s application.
        To navigate to the five different sections of the application, select any of the 5 buttons in the action bar above.
        Each button corresponds to a separate section of the application. These sections include:\n\n
        Amazon Price Manager\n
        Music Local\n
        Trip Planner\n
        Anthony Section\n
        Joshua Section\n\n
        These sections may also be accessed from the bottom bar below.
    </string>
    <string name="groupName">Group 7</string>

    <string name="amazonPriceManagerTitle">Amazon Price Manager</string>
    <string name="amazonPriceManagerAbbr">APM</string>
    <string name="searchBarLabel">Search for item:</string>
    <string name="searchBarHint">Link</string>
    <string name="searchButton">Search</string>
    <string name="mainAboutAction">About</string>
    <string name="resultsSearchLabel">Search</string>
    <string name="retailerInformationTitle">Offer Listings</string>
    <string name="addWatchListTitle">Add to Watchlist</string>
    <string name="mainInfoButton">Information</string>
    <string name="helpTitle">Guide to using Amazon Price Manager:</string>
    <string name="helpText">
        The main page has 1 entry field which takes 1 type of search query: an Amazon Item link
        \n
        Links should be formatted such that they appear as:\n
        https://amazon.ca (com, com.uk, etc.)/dp/itemID
        \n
        For example: https://www.amazon.ca/dp/product/B07SXMZLP9\n

        Any link may be turned into this by stripping off the excess after the item ID in the URL.\n
        Upon submitting a search query, there will be an attempted connection to server to retrieve the data required.\n
        One may also access their watchlist using the action button in the bottom left corner of the page.
    </string>
    <string name="amazonPriceManagerAuthorName">Mackenzie Dang</string>
    <string name="watchlistTitle">Watchlist</string>
    <string name="deleteItemLabel">Delete</string>

    <string name="ermanTitle">music Local</string>


    <string name="tripPlannerTitle">Trip Planner</string>
    <string name="tripLoginText">Email Address</string>
    <string name="tripLoginHint">Email Address</string>
    <string name="tripPasswordText">Password</string>
    <string name="tripPasswordHint">Password</string>
    <string name="tripLoginButton">Login</string>
    <string name="defEmail">email@domain.com</string>
    <string name="SavedEmail"> </string>
    <string name="icon2">Get Information</string>
    <string name="icon1"> Favourite List</string>
    <string name="stuartToast"> To add an item to your favourites list have the item selected and using the dialog box select the check box, to unfavourite and item open the dialog box again and click the check box again, or click remove in the favourites list</string>
    <string name="stuartAbout">Author: Stuart Isley Version Number: 1.1\nThis app works by selecting a button on the map image,
    once that button is selected a dialog will appear giving you the information about that location. With the dialog you are able to add
    that location to your favourites if you wish by selecting the check box in the dialog that appeared. You are able to view your favourites
    by selecting the boat icon on the tool bar, and if you click on the name of something in your favourites it will be removed from there.
    Due to an unforeseen error with the Google maps API caused the map to not load, a static image of a portion of the map to show the
    capabilities of this application in a smaller scale. The locations able to be selected are the radio buttons on the map.</string>
    <string name="stuartAdd">Add to Favourites</string>
    <string name="stuartCancel">Cancel</string>
    <string name="stuartReturn">Ok</string>
    <string name="stuartName">Name:</string>
    <string name="stuartDes">Description:</string>
    <string name="stuartCoor">Coordinates (Lat,Long):</string>
    <string name="stuartRating">Rating (out of 5):</string>
    <string name="stuartDatePick">Set Date of Trip</string>
    <string name="stuartTry">Favourite list would appear here</string>
    <string name="stuartTry2">Unable to open the date picker fragment without crashing application</string>

    <string name="anthonyTitle">MusicStreamingApp</string>
    <string name="basttitle_activity_bast9100">StreamingApp</string>

    <string name="bastaddInfo">Select a stream to add</string>
    <string name="bastdeleteInfo">Select a stream to delete</string>


    <string-array name="bastdefaultMusic">
        <item>PopChannel</item>
        <item>RockChannel</item>
        <item>HeavyMetalChannel</item>
        <item>ChristmasChannel</item>
        <item>RapChannel</item>
    </string-array>

    <string name="bastabout">About</string>
    <string name="bastok">Yes</string>
    <string name="bastclose">Close</string>
    <string name="bastdialog_title">App Info</string>
    <string name="bastdialog_message">This application is a base for a future streaming app. The app does
    not currently stream, but holds a general layout for what a streaming app could look like.</string>


    <string name="joshTitle">Joshua Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trip_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_trip_maps">Map</string>


    <string name="ErmanloginTitle1">music</string>
    <string name="ErmanloginTitle2">Local</string>
    <string name="ErmantempText">This button will be used to add to your favourites</string>
    <string name="ErmansettingsAboutText">Author: Erman Dinsel\nVersion: 2.0\nInstructions: Turn on your location within your Android
    device\'s settings. When the location prompt shows up, allow the app to use your device\'s location. Next, find a nearby venue
    on the map and select the marker. Now you can choose to select the title of the marker for more information. You can view information about the upcoming shows and choose to add that venue to your favourites,
    which is accessible from the toolbar. There is a bug that prevents the very first element to be added to favourites from
    being added to favourites. However, after the first attempt, the next times the user adds to favourites it works fine.
    Also, I was not able to make the app get nearby venues from the user\'s location. So, I made a preset json object.
    The app parses the json and returns a couple of venues and their information.</string>
    <string name="Ermanok">Ok</string>
    <string name="ErmanloginEmail">Email Address</string>
    <string name="ErmanloginPassword">Password</string>
    <string name="ErmanloginButtonText">Login</string>
    <string name="Ermantitle_activity_map_view">Map</string>
    <string name="ErmanDefaultEmailText">email@domain.com</string>
    <string name="ErmanSavedEmailText"> </string>
    <string name="ErmanAddToFavText">Add to Favourites</string>
    <string name="ErmanAddedToFavText">Added to Favourites</string>
    <string name="ErmanDeleteFavText">Delete From Favourites</string>
    <string name="ErmanhelpText">Help</string>
    <string name="Ermantitle_activity_erman_maps">Map</string>
    <string name="title_activity_erman_maps">Map</string>
    <string name="ErmanFavouritesText">Favourites</string>
    <string name="ErmanThankYouText">Thank you for using this app!</string>




</resources>
