<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/amazonPriceManagerButton"
        android:title="@string/amazonPriceManagerTitle"
        android:icon="@drawable/baseline_shop_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/ermanButton"
        android:title="@string/ermanTitle"
        android:icon="@drawable/baseline_music_note_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/stuartButton"
        android:title="@string/tripPlannerTitle"
        android:icon="@drawable/baseline_directions_boat_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/anthonyButton"
        android:title="@string/anthonyTitle"
        android:icon="@drawable/baseline_music_video_black_18dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/joshButton"
        android:title="@string/joshTitle"
        android:icon="@drawable/baseline_shop_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/aboutButton"
        android:title="@string/mainAboutAction"
        app:showAsAction="never" />

</menu>