<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/amazonPriceManagerButton"
        android:title="@string/amazonPriceManagerAbbr"
        android:icon="@drawable/baseline_shop_24"
         />

    <item
        android:id="@+id/ermanButton"
        android:title="@string/ermanTitle"
        android:icon="@drawable/baseline_shop_24"
         />
    <item
        android:id="@+id/stuartButton"
        android:title="@string/stuartTitle"
        android:icon="@drawable/baseline_shop_24"
         />
    <item
        android:id="@+id/anthonyButton"
        android:title="@string/anthonyTitle"
        android:icon="@drawable/baseline_shop_24"
         />
    <item
        android:id="@+id/joshButton"
        android:title="@string/joshTitle"
        android:icon="@drawable/baseline_shop_24"
         />
</menu>