<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stuartNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stuartName" />

    <TextView
        android:id="@+id/stuartNameChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/stuartDesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stuartDes" />

    <TextView
        android:id="@+id/stuartDesChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/stuartCoorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stuartCoor" />

    <TextView
        android:id="@+id/stuartCoordChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/stuartRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stuartRating" />

    <RatingBar
        android:id="@+id/stuartRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"/>

</LinearLayout>